--- a/orders/templates/orders/contract_template.html
+++ b/orders/templates/orders/contract_template.html
@@ -1030,7 +1030,7 @@
                                             {% endif %}
                                             <span class="fabric-name-bold">
                                                 {{ fabric.display_name }}
-                                                {% if not fabric.order_item and fabric.fabric_name %}
+                                                {% if not fabric.order_item and fabric.fabric_name and fabric.fabric_type in 'light,heavy,blackout' %}
                                                     <span style="background-color: #dc3545;
                                                                  color: white;
                                                                  padding: 2px 6px;
